12345678901234567890123456789012345678901234567890123456789012345678901234567890
         1         2         3         4         5         6         7         8
----+----|----+----|----+----|----+----|----+----|----+----|----+----|----+----|



ChangeLog (2004.nn.nn):
=======================

- Applied patches:
   - iometer-netware.patch by Thayne Harmon (modifies the usage output
     to reflect volume exclusion, adoped Makefile to use Code Warrier 8).
   - iometer-2003.12.16-post.DS2.DanielIcfVersionStringWithDash.patch
     by Daniel Scheibli (Enables support for trailing dashes in the
     version string of loaded ICF file).
   - iometer-2003.12.16-post.DS2.DanielEnforceParameters.patch by
     Daniel Scheibli (enforces usage of parameter -m when -i was
     specified).
   - iometer-netware.patch by Thayne Harmon (adds two minor changes
     to the code and Makefile for the Netware/IA32 port).
   - iometer-2003.12.16-post.DS2.patch by Thayne Harmon (adds some more
     changes and functionality for the Netware/IA32 port).
   - iometer.ppc.patch by Dan Bar Dov (adds support for Dynamo to run
     on Linux / PowerPC).
   - netware_cpp.patch by Thayne Harmon (adds a part of the Netware
     support - actually it adds the code file changes).
   - netware_h.patch by Thayne Harmon (adds a part of the Netware
     support - actually it adds the header file changes).
   - netwareonly_cpp.patch by Thayne Harmon (adds a part of the
     Netware support - actually it adds new Netware specific files).
   - iometer-121603ds2-iomtrkstat-xscale.patch by Ming Zhang (adds
     Linux on XScale support for Intel IQ80321 and IQ80331 to the
     iomtr_kstat module).
   - iometer-121603ds2-xscale.patch by Ming Zhang (adds Linux on 
     XScale support for Intel IQ80321 and IQ80331).
   - iometer-121603-ds2-report_tcp.patch by Ming Zhang (rewrite of the
     Report_TCP() function for Linux - more robust when the hostname is
     not setup properly).